# service-status-slack-webhook

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  one-time-slack-channel-history.py  pyproject.toml  render.yaml  requirements.txt  test.py  test.sh
adapters/: __init__.py  claude_status.py  openai_status.py  registry.py
service_status_slack_webhook.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
